reddit-clone.yaml
apiVersion: v1
kind: Service
metadata:
  name: reddit-clone-service
  labels:
    app: reddit-clone
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: reddit-clone
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reddit-clone-deployment
  labels:
    app: reddit-clone
spec:
  selector:
    matchLabels:
      app: reddit-clone
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: reddit-clone
    spec:
      containers:
      - image: asadhanif3188/redditclone:v1
        name: reddit-clone
        ports:
        - containerPort: 3000
