ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapps.com
    http:
      paths:
      - path: /online-shop
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
      - path: /wordpress
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
      - path: /wp-admin
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
      - path: /odoo
        pathType: Prefix
        backend:
          service:
            name: odoo-service
            port:
              number: 8069
